<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        >
        <ImageView
            android:layout_width="100dp"
            android:layout_height="60dp"
            app:srcCompat="@drawable/ic_nike_logo"
            app:tint="@color/white"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUpScreenTitle"
            android:textAppearance="?textAppearanceHeadline5"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authHint"
            android:alpha="0.8"
            android:layout_marginTop="8dp"
            android:textAppearance="?textAppearanceBody1"
            />
        <EditText
            android:id="@+id/emailEt_SignUp"
            android:layout_width="@dimen/authViewWidth"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="24dp"
            android:gravity="right|center_vertical"
            style="@style/Theme.NikeStore.AuthTheme.EditText"
            />
        <EditText
            android:id="@+id/passwordEt_SignUp"
            android:layout_width="@dimen/authViewWidth"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginTop="16dp"
            android:inputType="textPassword"
            android:gravity="right|center_vertical"
            style="@style/Theme.NikeStore.AuthTheme.EditText"

            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpBtn"
            android:layout_width="@dimen/authViewWidth"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            android:layout_marginTop="16dp"
            android:minHeight="48dp"
            android:gravity="center"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginHint"
            android:alpha="0.4"
            android:textAppearance="?textAppearanceBody1"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginLinkBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginTitle"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            />


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>