<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feachers.shipping.ShippingActivity"
    android:layoutDirection="rtl"
    >
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.myapp.nikestore.view.NikeToolbar
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="?android:colorBackground"
            app:title_nt="@string/shippingToolbarTitle"
            />
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:paddingBottom="32dp"
        android:clipToPadding="false"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstNameEtl_Shipping"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ShippingTextInputLayoutStyle"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstNameEt_Shipping"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ShippingTextInputEditTextStyle"
                    android:hint="@string/firstName"
                    android:textColor="@color/black"
                    android:text="حسین"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastNameEtl_Shipping"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ShippingTextInputLayoutStyle"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastNameEt_Shipping"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ShippingTextInputEditTextStyle"
                    android:hint="@string/lastName"
                    android:textColor="@color/black"
                    android:text="ارزانی"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/postalCodeEtl_Shipping"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ShippingTextInputLayoutStyle"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/postalCodeEt_Shipping"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ShippingTextInputEditTextStyle"
                    android:hint="@string/postalCode"
                    android:textColor="@color/black"
                    android:text="542452245d"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneNumberEtl_Shipping"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ShippingTextInputLayoutStyle"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneNumberEt_Shipping"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ShippingTextInputEditTextStyle"
                    android:hint="@string/phoneNumber"
                    android:textColor="@color/black"
                    android:text="09125489658"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addressEtl_Shipping"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ShippingTextInputLayoutStyle"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addressEt_Shipping"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ShippingTextInputEditTextStyle"
                    android:hint="@string/address"
                    android:textColor="@color/black"
                    android:text="بهارااانااناناناناناناان"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <include
                android:id="@+id/purchase_detail_shipping"
                layout="@layout/item_purchase_detail"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
              />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                >
                <com.google.android.material.button.MaterialButton
                android:id="@+id/codBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cashOnDelivery"
                android:layout_marginEnd="8dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/onlinePaymentBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/onlinePayment"
                    android:layout_marginStart="8dp"
                    />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>