<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feachers.checkout.CheckOutActivity"
    android:layoutDirection="rtl"
    >
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorOnPrimary"
        >
        <com.myapp.nikestore.view.NikeToolbar
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:title_nt="@string/checkOutToolbarTitle"
            />
     </com.google.android.material.appbar.AppBarLayout>
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:paddingTop="32dp"
         >
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:paddingBottom="16dp"
             android:background="@drawable/background_comment"
             >

             <TextView
                 android:id="@+id/purchaseStatusTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:textAppearance="?textAppearanceHeadline5"
                 android:textStyle="bold"
                 android:textColor="?colorPrimary"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="خرید با موفقیت انجام شد" />

             <TextView
                 android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="32dp"
                 android:text="@string/purchaseStatus"
                 android:textAppearance="?textAppearanceBody1"
                 android:textColor="?android:textColorSecondary"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/purchaseStatusTv" />

             <TextView
                 android:id="@+id/orderStatusTv_CheckOut"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
                 android:textAppearance="?textAppearanceBody1"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/textView4"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/textView4"
                 tools:text="پرداخت موفق" />

             <View
                 android:id="@+id/view3"
                 android:layout_width="0dp"
                 android:layout_height="1dp"
                 android:layout_marginTop="12dp"
                 android:background="?dividerColor"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView4" />

             <TextView
                 android:id="@+id/purchasePrice_CheckOut"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 tools:text="189000"
                 android:textStyle="bold"
                 android:textAppearance="?textAppearanceBody1"
                 app:layout_constraintEnd_toEndOf="@+id/orderStatusTv_CheckOut"
                 app:layout_constraintTop_toBottomOf="@+id/view3" />

             <TextView
                 android:id="@+id/textView8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 android:layout_marginBottom="12dp"
                 android:text="@string/price"
                 android:textAppearance="?textAppearanceBody1"
                 android:textColor="?android:textColorSecondary"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/textView4"
                 app:layout_constraintTop_toBottomOf="@+id/view3" />


         </androidx.constraintlayout.widget.ConstraintLayout>
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="16dp"
             >
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/returnHomeBtn_CheckOut"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/returnHome"
                 android:textStyle="bold"
                 android:layout_marginEnd="8dp"
                 />

             <com.google.android.material.button.MaterialButton
                 android:id="@+id/purchaseHistory_CheckOut"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/purchaseHistory"
                 android:textStyle="bold"
                 android:layout_marginStart="8dp"
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 />

         </LinearLayout>
     </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>