<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:clipToPadding="false"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/purchaseDetail"
        android:textAppearance="?textAppearanceHeadline6"
        android:textColor="?android:textColorSecondary"
        />
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="2dp"
        app:cardCornerRadius="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            >

            <TextView
                android:id="@+id/totalPriceTv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/totalPrice"
                android:textAppearance="?textAppearanceBody1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/shippingCost_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/shippingCost"
                android:textAppearance="?textAppearanceBody1"
                app:layout_constraintStart_toStartOf="@+id/totalPriceTv_title"
                app:layout_constraintTop_toBottomOf="@+id/totalPriceTv_title" />

            <TextView
                android:id="@+id/payablePrice_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/payablePrice"
                android:textAppearance="?textAppearanceBody1"
                app:layout_constraintStart_toStartOf="@+id/shippingCost_title"
                app:layout_constraintTop_toBottomOf="@+id/shippingCost_title" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="?dividerColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/totalPriceTv_title" />

            <View
                android:id="@+id/view2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="?dividerColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shippingCost_title" />

            <TextView
                android:id="@+id/totalPriceTv_purchaseDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                tools:text="166000"
                android:textAppearance="?textAppearanceBody1"
                app:layout_constraintBottom_toBottomOf="@+id/totalPriceTv_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/totalPriceTv_title" />

            <TextView
                android:id="@+id/shippingCost_purchaseDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="15000"
                android:textAppearance="?textAppearanceBody1"
                app:layout_constraintBottom_toBottomOf="@+id/shippingCost_title"
                app:layout_constraintEnd_toEndOf="@id/totalPriceTv_purchaseDetail"
                app:layout_constraintTop_toTopOf="@+id/shippingCost_title" />

            <TextView
                android:id="@+id/payablePrice_purchaseDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="100000"
                android:textAppearance="?textAppearanceBody1"
                app:layout_constraintBottom_toBottomOf="@+id/payablePrice_title"
                app:layout_constraintEnd_toEndOf="@+id/shippingCost_purchaseDetail"
                app:layout_constraintTop_toTopOf="@+id/payablePrice_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

</LinearLayout>